[gd_scene load_steps=30 format=2]

[ext_resource path="res://Images/Fireball/Fireball0.png" type="Texture" id=1]
[ext_resource path="res://Images/Fireball/Fireball1.png" type="Texture" id=2]
[ext_resource path="res://Images/Fireball/Fireball2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Fireball_script.gd" type="Script" id=4]
[ext_resource path="res://Images/Fireball/explosion.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
} ]

[node name="Fireball" type="Area2D" groups=["Death_Group"]]
collision_layer = 7
collision_mask = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Default"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( 13, 3, 13, -3, 12, -6, 8, -10, 6, -12, -4, -12, -5, -11, -16, -11, -16, 9, -14, 9, -14, 12, 6, 12, 6, 11, 9, 11, 9, 9, 13, 7 )

[node name="Distance_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="timeOut" type="Timer" parent="."]
autostart = true

[node name="Fire_rate" type="Timer" parent="."]

[node name="Explode" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 4.76837e-07, 3.38813e-21 )
scale = Vector2( 0.625, 0.625 )
frames = SubResource( 24 )
animation = "Explosion"
frame = 1
speed_scale = 5.0

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="timeout" from="Distance_timer" to="." method="_on_Distance_timer_timeout"]
[connection signal="timeout" from="timeOut" to="." method="_on_timeOut_timeout"]
[connection signal="animation_finished" from="Explode" to="." method="_on_Explode_animation_finished"]
